Bug 1006576 - Set DISABLE_SNAPPING flag on all printing gfxContexts. r=mattwoodrow, a=sledru